猫咪照片管理功能基本完成 更新部分文档生成文件命名和类型 修复了验证器无法验证数组的BUG
