# src/modules/manage/dtos/update-cat-photo.response.ts
@@ -1,0 +1,3 @@
+export class UpdateCatPhotoResponseDto {
+
+}
